DAO stuff sa require u PHP

--- a/frontend/pages/medicalCheck.html
+++ b/frontend/pages/medicalCheck.html
@@ -17,7 +17,7 @@
         </div>
         <div class="icon-item">
             <i id="1" class="fa-solid fa-user"></i>
-            <p class="second-icon-text"><a href="userProfile.html">Moj Profil</a></p>
+            <p class="second-icon-text">Moj Profil</p>
         </div>
         <div class="icon-item">
             <a href="https://www.zzjzfbih.ba/kontakt/"><i id="2" class="fa-solid fa-phone"></a></i>
